--- a/SDK52-P-NUCLEO-TBMT-sensor.ioc
+++ b/SDK52-P-NUCLEO-TBMT-sensor.ioc
@@ -64,6 +64,7 @@ KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
 Mcu.IP1=DAC
+Mcu.IP10=USART2
 Mcu.IP2=MotorControl
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -71,40 +72,42 @@ Mcu.IP5=SYS
 Mcu.IP6=TIM1
 Mcu.IP7=TIM2
 Mcu.IP8=TIM6
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP9=USART1
+Mcu.IPNb=11
 Mcu.Name=STM32F302R(6-8)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PF0-OSC_IN
 Mcu.Pin10=PA4
-Mcu.Pin11=PB2
-Mcu.Pin12=PB10
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA11
-Mcu.Pin17=PA15
-Mcu.Pin18=PC10
-Mcu.Pin19=PC11
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB2
+Mcu.Pin14=PB10
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA11
+Mcu.Pin19=PA15
 Mcu.Pin2=PF1-OSC_OUT
-Mcu.Pin20=PC12
-Mcu.Pin21=PB3
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM1_VS_ControllerModeTrigger
-Mcu.Pin24=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin25=VP_TIM1_VS_no_output4
-Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin28=VP_MotorControl_MC_ENABLED
+Mcu.Pin20=PC10
+Mcu.Pin21=PC11
+Mcu.Pin22=PC12
+Mcu.Pin23=PB3
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIM1_VS_ControllerModeTrigger
+Mcu.Pin26=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin27=VP_TIM1_VS_no_output4
+Mcu.Pin28=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PC0
+Mcu.Pin30=VP_MotorControl_MC_ENABLED
 Mcu.Pin4=PC1
 Mcu.Pin5=PC2
 Mcu.Pin6=PA0
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=29
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F302R8Tx
@@ -740,6 +743,16 @@ PC2.GPIO_Mode=GPIO_MODE_ANALOG
 PC2.GPIO_PuPd=GPIO_NOPULL
 PC2.Locked=true
 PC2.Signal=ADCx_IN8
+PC4.GPIOParameters=GPIO_Speed,GPIO_Label
+PC4.GPIO_Label=USATR1_T
+PC4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PC4.Mode=Asynchronous
+PC4.Signal=USART1_TX
+PC5.GPIOParameters=GPIO_Speed,GPIO_Label
+PC5.GPIO_Label=USART1_R
+PC5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PC5.Mode=Asynchronous
+PC5.Signal=USART1_RX
 PCC.Checker=false
 PCC.Line=STM32F302
 PCC.MCU=STM32F302R(6-8)Tx
@@ -901,6 +914,9 @@ TIM2.Period=M1_HALL_TIM_PERIOD
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=5000
 TIM6.Prescaler=7200
+USART1.BaudRate=115200
+USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.BaudRate=115200
 USART2.IPParameters=BaudRate,WordLength,VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
