--- a/SDK52-P-NUCLEO-TBMT-sensor.ioc
+++ b/SDK52-P-NUCLEO-TBMT-sensor.ioc
@@ -51,6 +51,8 @@ ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 ADC1.ScanConvMode=ADC_SCAN_ENABLE
 ADC1.SubFamily=STM32F302x8
 ADC1.master=1
+CAN.CalculateTimeQuantum=444.44444444444446
+CAN.IPParameters=CalculateTimeQuantum
 DAC.DAC_OutputBuffer=DAC_OUTPUTBUFFER_DISABLE
 DAC.DAC_Trigger=DAC_TRIGGER_SOFTWARE
 DAC.IPParameters=DAC_Trigger,DAC_OutputBuffer
@@ -63,17 +65,18 @@ File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
-Mcu.IP1=DAC
-Mcu.IP10=USART2
-Mcu.IP2=MotorControl
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TIM2
-Mcu.IP8=TIM6
-Mcu.IP9=USART1
-Mcu.IPNb=11
+Mcu.IP1=CAN
+Mcu.IP10=USART1
+Mcu.IP11=USART2
+Mcu.IP2=DAC
+Mcu.IP3=MotorControl
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=TIM2
+Mcu.IP9=TIM6
+Mcu.IPNb=12
 Mcu.Name=STM32F302R(6-8)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -93,21 +96,23 @@ Mcu.Pin20=PC10
 Mcu.Pin21=PC11
 Mcu.Pin22=PC12
 Mcu.Pin23=PB3
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM1_VS_ControllerModeTrigger
-Mcu.Pin26=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin27=VP_TIM1_VS_no_output4
-Mcu.Pin28=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM1_VS_ControllerModeTrigger
+Mcu.Pin28=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin29=VP_TIM1_VS_no_output4
 Mcu.Pin3=PC0
-Mcu.Pin30=VP_MotorControl_MC_ENABLED
+Mcu.Pin30=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin32=VP_MotorControl_MC_ENABLED
 Mcu.Pin4=PC1
 Mcu.Pin5=PC2
 Mcu.Pin6=PA0
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=31
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F302R8Tx
@@ -695,6 +700,11 @@ PB3.GPIO_PuPd=GPIO_NOPULL
 PB3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB3.Locked=true
 PB3.Signal=S_TIM2_CH2
+PB8.Locked=true
+PB8.Mode=Master
+PB8.Signal=CAN_RX
+PB9.Mode=Master
+PB9.Signal=CAN_TX
 PC0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC0.GPIO_Label=M1_CURR_AMPL_W
 PC0.GPIO_Mode=GPIO_MODE_ANALOG
@@ -794,7 +804,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_CAN_Init-CAN-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,11-MX_MotorControl_Init-MotorControl-false-HAL-false
 RCC.ADC12outputFreq_Value=72000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
